[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# colour="0.6.0"
# cargo-edit = "0.8.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
